--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first web</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <div class="contener">
         <nav>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <img src="src/logo.png" alt="logo">
+            <ul>
+                <li> <a href="">Home</a></li>
+                <li> <a href="">About</a></li>
+                <li> <a href="">Contact</a></li>
+            </ul>
         </nav>
     </div>
 </body>
