--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <li> <a href="">Contact</a></li>
             </ul>
         </nav>
+        <div class="benar">
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, consequuntur.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit illum amet molestiae obcaecati, officiis sequi voluptatum, corporis molestias, fugit vitae expedita adipisci similique veniam rerum deleniti eligendi voluptatem temporibus vel.</p>
+        </div>
     </div>
 </body>
 </html>
