--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             </ul>
         </nav>
         <div class="benar">
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, consequuntur.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit illum amet molestiae obcaecati, officiis sequi voluptatum, corporis molestias, fugit vitae expedita adipisci similique veniam rerum deleniti eligendi voluptatem temporibus vel.</p>
+            <h1>MAKE YOUR LIFE EASIER.</h1>
+            <p>This page shares my best articles to read on topics like health, happiness, creativity, productivity and more. The central question that drives my work is, “How can we live better?” To answer that question, I like to write about science-based ways to solve practical problems.</p> <br>
+            <a href="">Buy Car</a>
         </div>
     </div>
+    <!-- secend section  -->
 </body>
 </html>
