--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             <a href="">Buy Car</a>
         </div>
     </div>
+
     <!-- secend section  -->
+    <div class="secend-section">
+        <div class="first-part">
+            <h2>WIRELESS GAMING</h2>
+            <p>This page shares my best articles to read on topics like health, happiness, creativity, productivity and more. The central question that drives my work is, “How can we live better?” To answer that question, I like to write about science-based ways to solve practical problems.</p>
+        </div>
+        <div class="secend-part">
+            <img src="src/asaid.jpg" alt="">
+        </div>
+    </div>
 </body>
 </html>
